--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,10 +32,16 @@ classifiers = [  #! Update me
 "gherald" = "gherald.__main__:app"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.13"
 
 typer = {extras = ["all"], version = "^0.4.0"}
 rich = "^10.14.0"
+
+pydriller = "^2.5.1"
+pandas = "^2.1.2"
+GitPython = "^3.1.40"
+pandarallel = "^1.6.5"
+nltk = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.1"
