--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,26 @@
-click==8.1.7 ; python_version >= "3.9" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0"
-commonmark==0.9.1 ; python_version >= "3.9" and python_version < "4.0"
-pygments==2.16.1 ; python_version >= "3.9" and python_version < "4.0"
-rich==10.16.2 ; python_version >= "3.9" and python_version < "4.0"
-shellingham==1.5.3 ; python_version >= "3.9" and python_version < "4.0"
-typer[all]==0.4.2 ; python_version >= "3.9" and python_version < "4.0"
+click==8.1.7 ; python_version >= "3.9" and python_version < "3.13"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.13"
+commonmark==0.9.1 ; python_version >= "3.9" and python_version < "3.13"
+dill==0.3.7 ; python_version >= "3.9" and python_version < "3.13"
+gitdb==4.0.11 ; python_version >= "3.9" and python_version < "3.13"
+gitpython==3.1.40 ; python_version >= "3.9" and python_version < "3.13"
+joblib==1.3.2 ; python_version >= "3.9" and python_version < "3.13"
+lizard==1.17.10 ; python_version >= "3.9" and python_version < "3.13"
+nltk==3.8.1 ; python_version >= "3.9" and python_version < "3.13"
+numpy==1.26.1 ; python_version >= "3.9" and python_version <= "3.11" or python_version >= "3.12" and python_version < "3.13"
+pandarallel==1.6.5 ; python_version >= "3.9" and python_version < "3.13"
+pandas==2.1.3 ; python_version >= "3.9" and python_version < "3.13"
+psutil==5.9.6 ; python_version >= "3.9" and python_version < "3.13"
+pydriller==2.5.1 ; python_version >= "3.9" and python_version < "3.13"
+pygments==2.16.1 ; python_version >= "3.9" and python_version < "3.13"
+python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "3.13"
+pytz==2023.3.post1 ; python_version >= "3.9" and python_version < "3.13"
+regex==2023.10.3 ; python_version >= "3.9" and python_version < "3.13"
+rich==10.16.2 ; python_version >= "3.9" and python_version < "3.13"
+shellingham==1.5.4 ; python_version >= "3.9" and python_version < "3.13"
+six==1.16.0 ; python_version >= "3.9" and python_version < "3.13"
+smmap==5.0.1 ; python_version >= "3.9" and python_version < "3.13"
+tqdm==4.66.1 ; python_version >= "3.9" and python_version < "3.13"
+typer[all]==0.4.2 ; python_version >= "3.9" and python_version < "3.13"
+types-pytz==2023.3.1.1 ; python_version >= "3.9" and python_version < "3.13"
+tzdata==2023.3 ; python_version >= "3.9" and python_version < "3.13"
